--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Django==1.11
 dj-static==0.0.6
 gunicorn==19.7.1
 django-bootstrap4==0.0.7
+django-heroku==0.3.1
 Pillow==5.2.0
 psycopg2==2.7.5
 python-decouple==3.1
